<resources>
    <string name="app_name"> ControleCliente </string>
    <string name="bt_clientes">Clientes</string>
    <string name="bt_Notas">Notas</string>
    <string name="Codigo_cad_cliente">Código: </string>
    <string name="Nome_cad_cliente">Nome: </string>
    <string name="Endereço_cad_cliente">Endereço: </string>
    <string name="Cidade_cad_cliente">Cidade: </string>
    <string name="btsalvar">Salvar</string>
    <string name="btcancelar">Cancelar</string>
    <string name="btalterar">Alterar</string>
    <string name="btexcluir">Excluir</string>
    <string name="btauditar">Auditar</string>
    <string name="btsalvar_nota">Salvar</string>
    <string name="btalterar_nota">Alterar</string>
    <string name="btcancelar_nota">Cancelar</string>
    <string name="txtCliente_nota">Cliente</string>
    <string name="txtNota_nota">Nota: </string>
</resources>
